--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,9 @@
-html, body, #cesiumContainer {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
+html,
+body,
+#cesiumContainer {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
